Use only Java 8 APIs